Changed background image and fixed issues
I changed the background image, for now this is still temporary but it suits the page better than the previous image and it would be easier to work with while building the style of the page.
Also in the previous commit the content in indexScrollDown was not aligned correctly. Now the arrow appears correctly in the middle.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -110,9 +110,10 @@ footer {
 .homeParallax {
   grid-area: homeParallax;
   min-height: 100vh;
-  background-image: url('../imgs/temp.jpg');
+  background-image: url('../imgs/indexBackground.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  color: white;
   margin: 0;
   padding: 0;
   z-index: +1;
